--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -15,7 +15,7 @@
     <div class="tp_box clearfix">
       <div class="top">
         <span class="tp_loginInfo">您好，欢迎来到折扣社！</span>
-        <a href="../static/login_user.html" class="top-a">[登录]</a>
+        <a href="login_user.html" class="top-a">[登录]</a>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
   <div class="have-reg w940">
     <span>
        我已经注册，现在就&nbsp;
-       <a href="../static/login_user.html" class="blue_link">登录</a>
+       <a href="login_user.html" class="blue_link">登录</a>
     </span>
   </div>
   <!-- content start -->
@@ -69,7 +69,7 @@
       <div class="spsearch item">
         <p>
           <label>&nbsp;</label>
-          <input  type="button" onclick="register">
+          <input  type="button" onclick="register()">
         </p>
       </div>
     </div>
@@ -78,7 +78,7 @@
   <div class="ft for-register mt10">
     <div class="ft_box clearfix">
       <p class="fl"><a href="login_admin.html" class="copyRight blue_link">管理员入口</a></p>
-      <p class="fr copyRight">鄂ICP ©折扣店2019-2020，All Rights Reserved</p>
+      <p class="fr copyRight">鲁ICP ©折扣店2019-2020，All Rights Reserved</p>
     </div>
   </div>
   <!--footer end-->
@@ -86,6 +86,6 @@
 </body>
 <script type="text/javascript" src="script/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="script/js.js"></script>
-<script type="text/javascript" src="script/main.js"></script>
+<script type="text/javascript" src="script/register.js"></script>
 
 </html>
