--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -152,7 +152,7 @@
   </div>
   <div class="container-right">
     <div class="container1">
-      <div class="pic-sale1"> <img src="images/sale%20(2).jpg" title="粉色衬衣" /> </div>
+      <div class="pic-sale1"> <img src="images/sale (2).jpg" title="粉色衬衣" /> </div>
       <h4><a href="goodslist.html">纯棉商务休闲衬衣</a></h4>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;精致与休闲造型兼备的牛津纺衬衫。简约素雅的风格，新潮百搭
       <h5 style="color:#F30 " > 特价￥299</h5>
@@ -160,7 +160,7 @@
     </div>
     <br />
     <div class="container2">
-      <div class="pic-sale2"> <img src="images/sale%20(3).jpg" title="儿童卫衣" /></div>
+      <div class="pic-sale2"> <img src="images/sale (3).jpg" title="儿童卫衣" /></div>
       <br />
       <h4><a href="goodslist.html">亲子儿童卫衣</a></h4>
       <p>2014秋装新款女神的新衣张馨予同款亲子装儿童装卫衣 朗姿LANCY
@@ -174,7 +174,7 @@
     <br />
     <br />
     <div class="container3">
-      <div class="pic-sale3"> <img src="images/sale%20(1).jpg" title="女士靴子"/> </div>
+      <div class="pic-sale3"> <img src="images/sale (1).jpg" title="女士靴子"/> </div>
       <h4><a href="goodslist.html">防水台真皮靴子</a></h4>
       <p>佰缌2014秋冬新款欧美尖头粗跟短靴高跟 防水台真皮铆钉女式靴子
       <h5 style="color:#F30 " >
