--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -5,6 +5,7 @@
 <title>购物车详情</title>
 <link href="css/shopping.css" rel='stylesheet' type='text/css' />
 <link href="css/shopcart.css" rel='stylesheet' type='text/css' />
+  <link rel="start icon" href="images/resize_png_new.png"  >
 </head>
 
 <body>
@@ -15,7 +16,7 @@
   </div>
   <div class="top-middle">
     <marquee id="move">
-    欢迎下载折扣店APP,折扣店随时随地带你购物！
+    欢迎下载并夕夕APP,并夕夕随时随地带你购物！
     </marquee>
   </div>
   <div class="top-right">
@@ -179,7 +180,7 @@
 <div class="cart3">
 <div class="cart2-left"> <img src="images/choose2.jpg" width="105px" height="142px" /> </div>
 <div class="cart2-middle">
-  <h4> <a href="">女神的新衣Nana林珍娜同款预售伊芙丽2014新款马甲套装一起更优惠</a></h4>
+  <h4> <a href="">女神的新衣Nana林珍娜同款预售伊芙丽2019新款马甲套装一起更优惠</a></h4>
   <p> 选择适合你的尺码和颜色</p>
   <form>
     <input type="checkbox" name="颜色" value="color 1" />
@@ -243,7 +244,7 @@
 <div class="cart5">
   <div class="cart2-left"> <img src="images/choose4.jpg" width="105px" height="142px" /> </div>
   <div class="cart2-middle">
-    <h4> <a href="">女神的新衣 ASOBIO 尚雯婕同款 2014秋装 立体花宽松字母长袖卫衣</a></h4>
+    <h4> <a href="">女神的新衣 ASOBIO 尚雯婕同款 2019秋装 立体花宽松字母长袖卫衣</a></h4>
     <p> 选择你喜欢的颜色</p>
     <form>
       <input type="checkbox" name="颜色" value="color 1" />
@@ -275,7 +276,7 @@
   <div class="cart6">
     <div class="cart2-left"> <img src="images/choose5.jpg" width="105px" height="142px" /> </div>
     <div class="cart2-middle">
-      <h4> <a href="">2014秋冬上新 秋季新款女装 简约撞色 呢子大衣 中长款橙毛呢外套</a></h4>
+      <h4> <a href="">2019秋冬上新 秋季新款女装 简约撞色 呢子大衣 中长款橙毛呢外套</a></h4>
       <p> 选择你喜欢的颜色</p>
       <form>
         <input type="checkbox" name="颜色" value="color 1" />
