--- a/src/main/resources/static/goodslist.html
+++ b/src/main/resources/static/goodslist.html
@@ -15,7 +15,7 @@
   </div>
   <div class="top-middle">
     <marquee id="move">
-    欢迎下载折扣店APP,折扣店随时随地带你购物！
+    欢迎下载并夕夕APP,并夕夕随时随地带你购物！
     </marquee>
   </div>
   <div class="top-right">
