--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="top-middle">
     <marquee id="move">
-    欢迎下载折扣店APP,折扣店随时随地带你购物！
+    欢迎下载并夕夕APP,并夕夕随时随地带你购物！
     </marquee>
   </div>
   <div class="top-right">
@@ -25,7 +25,7 @@
       |
       <li> <a href="#">关于我们</a></li>
       |
-      <li> <a href="../static/login_user.html" target="_blank">登录</a></li>
+      <li> <a href="login_user.html" target="_blank">登录</a></li>
       |
       <li> <a href="register.html" target="_blank">注册</a></li>
     </ul>
@@ -35,7 +35,7 @@
 <!------ end header top-------> 
 <!-----start header logo------->
 <div class="header1">
-  <div id="logo"><a href="index.html"> <img src="images/logo.png" alt="折扣店logo" title="折扣社"/> </a></div>
+  <div id="logo"><a href="index.html"> <img src="images/logo.png" alt="并夕夕logo" title="并夕夕"/> </a></div>
   <div class="search">
     <form action="#" method="post" id="sitesearch">
       <fieldset>
@@ -151,37 +151,37 @@
     </div>
   </div>
   <div class="container-right">
-    <div class="container1">
-      <div class="pic-sale1"> <img src="images/sale (2).jpg" title="粉色衬衣" /> </div>
-      <h4><a href="goodslist.html">纯棉商务休闲衬衣</a></h4>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;精致与休闲造型兼备的牛津纺衬衫。简约素雅的风格，新潮百搭
-      <h5 style="color:#F30 " > 特价￥299</h5>
-      </p>
-    </div>
-    <br />
-    <div class="container2">
-      <div class="pic-sale2"> <img src="images/sale (3).jpg" title="儿童卫衣" /></div>
-      <br />
-      <h4><a href="goodslist.html">亲子儿童卫衣</a></h4>
-      <p>2014秋装新款女神的新衣张馨予同款亲子装儿童装卫衣 朗姿LANCY
-      <h5 style="color:#F30 " > 现价￥199</h5>
-      </p>
-    </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <div class="container3">
-      <div class="pic-sale3"> <img src="images/sale (1).jpg" title="女士靴子"/> </div>
-      <h4><a href="goodslist.html">防水台真皮靴子</a></h4>
-      <p>佰缌2014秋冬新款欧美尖头粗跟短靴高跟 防水台真皮铆钉女式靴子
-      <h5 style="color:#F30 " >
-      特价优惠￥699
-      <h5>
-      </p>
-    </div>
+<!--    <div class="container1">-->
+<!--      <div class="pic-sale1"> <img src="images/sale (2).jpg" title="粉色衬衣" /> </div>-->
+<!--      <h4><a href="goodslist.html">纯棉商务休闲衬衣</a></h4>-->
+<!--      <p>&nbsp;&nbsp;&nbsp;&nbsp;精致与休闲造型兼备的牛津纺衬衫。简约素雅的风格，新潮百搭-->
+<!--      <h5 style="color:#F30 " > 特价￥299</h5>-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <br />-->
+<!--    <div class="container2">-->
+<!--      <div class="pic-sale2"> <img src="images/sale (3).jpg" title="儿童卫衣" /></div>-->
+<!--      <br />-->
+<!--      <h4><a href="goodslist.html">亲子儿童卫衣</a></h4>-->
+<!--      <p>2019秋装新款女神的新衣张馨予同款亲子装儿童装卫衣 朗姿LANCY-->
+<!--      <h5 style="color:#F30 " > 现价￥199</h5>-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <br />-->
+<!--    <br />-->
+<!--    <br />-->
+<!--    <br />-->
+<!--    <br />-->
+<!--    <br />-->
+<!--    <div class="container3">-->
+<!--      <div class="pic-sale3"> <img src="images/sale (1).jpg" title="女士靴子"/> </div>-->
+<!--      <h4><a href="goodslist.html">防水台真皮靴子</a></h4>-->
+<!--      <p>佰缌2019秋冬新款欧美尖头粗跟短靴高跟 防水台真皮铆钉女式靴子-->
+<!--      <h5 style="color:#F30 " >-->
+<!--      特价优惠￥699-->
+<!--      <h5>-->
+<!--      </p>-->
+<!--    </div>-->
   </div>
 </div>
 <!--------end content1---------> 
@@ -289,7 +289,7 @@
       </marquee>
     </div>
   </div>
-  <div class="address"> 折扣店服装公司地址：<br />
+  <div class="address"> 并夕夕服装公司地址：<br />
     中国<br />
     山东/济南市<br />
     舜华路1500号<br />
@@ -300,7 +300,7 @@
   </div>
   <div class="footer-right">
     <marquee id="move2" scrollamount="5" direction="right">
-    美丽百分百，折扣店让你快人一步
+    美丽百分百，并夕夕让你快人一步
     </marquee>
     <div class="share-pic"> <img src="images/social.png" title="分享更快乐" usemap="#mapxie2" border="0"  />
       <map name="mapxie2" id="mapxie2">
@@ -328,7 +328,7 @@
 
 <div class="footer2">
   <p>关于我们 - 版权声明 - 帮助(？) - 联系我们 - 友情链接 - 用户注册 - 地图<br />
-    hill may的折扣店 版权所有 CopyRight 2019-2020 Hill may.com, Inc. All Rights Reserved</p>
+    hill may的并夕夕 版权所有 CopyRight 2019-2020 Hill may.com, Inc. All Rights Reserved</p>
 </div>
 <!-------- end footer ---------> 
 
