--- a/src/main/resources/static/login_user.html
+++ b/src/main/resources/static/login_user.html
@@ -42,7 +42,7 @@
       <div class="item">
         <input type="button" onclick="login()">
       </div>
-      <div class="forget-psd mb15"> <a class="fl" href="index.html">折扣社直通车</a><a href="register.html" class="fr">免费注册</a> </div>
+      <div class="forget-psd mb15"> <a class="fl" href="index.html">并夕夕直通车</a><a href="register.html" class="fr">免费注册</a> </div>
     </div>
   </div>
   <!--footer start-->
