--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -14,7 +14,7 @@
   <div class="tp for-register">
     <div class="tp_box clearfix">
       <div class="top">
-        <span class="tp_loginInfo">您好，欢迎来到折扣社！</span>
+        <span class="tp_loginInfo">您好，欢迎来到并夕夕！</span>
         <a href="login_user.html" class="top-a">[登录]</a>
       </div>
     </div>
@@ -25,7 +25,7 @@
     <div class="w940">
       <div class="header clearfix">
         <h1 class="fl">
-          <a title="折扣社" href="index.html"><img src="images/logo.png"></a>
+          <a title="并夕夕" href="index.html"><img src="images/logo.png"></a>
         </h1>
         <div class="welcome fl">欢迎注册</div>
       </div>
