--- a/src/main/resources/static/details.html
+++ b/src/main/resources/static/details.html
@@ -16,7 +16,7 @@
 </div>
 <div class="top-middle">
   <marquee id="move">
-  欢迎下载折扣店APP,折扣店随时随地带你购物！
+  欢迎下载并夕夕APP,并夕夕随时随地带你购物！
   </marquee>
 </div>
 <div class="top-right">
@@ -197,7 +197,7 @@
     <div class="menu-C">
       <div     class="b"> 商品细节 </div>
       <div class="c1"><img src="images/pic2.jpg" width="160px" height="180px"/></div>
-      <div class="c2">斯巴奴 2014秋装新品 男装外套 休闲拼接立领夹克外套男 3051A<br />
+      <div class="c2">斯巴奴 2019秋装新品 男装外套 休闲拼接立领夹克外套男 3051A<br />
         <br />
         ①欧美时尚棒球领型、修身拉链款！<br />
         <br />
@@ -400,7 +400,7 @@
     </div>
     <div class="footer-right">
       <marquee id="move2" scrollamount="5">
-      美丽百分百，折扣店让你快人一步
+      美丽百分百，并夕夕让你快人一步
       </marquee>
       <div class="share-pic"><img src="images/social.png" usemap="#mapxie3" border="0" />
         <map name="mapxie3" id="mapxie3">
