--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -144,7 +144,13 @@
   <div class="slider">
     <div class="area">
       <div id=js class="js">
-        <div class="box01"> <img onClick="location.href='goodslist.html'"  src="images/banner_01.jpg"> <img onClick="location.href='cart.html'" style="DISPLAY: none" src="images/banner_02.jpg"> <img onClick="location.href='details.html'" style="DISPLAY: none" src="images/banner_03.jpg"> <img onClick="location.href='details.html'" style="DISPLAY: none" src="images/banner_04.jpg"> <img onClick="location.href='details.html'" style="DISPLAY: none" src="images/banner_05.jpg"> </div>
+        <div class="box01">
+          <img onClick="location.href='goodslist.html'"  src="images/banner_01.jpg">
+          <img onClick="location.href='goodslist.html'" style="DISPLAY: none" src="images/banner_02.jpg">
+          <img onClick="location.href='goodslist.html'" style="DISPLAY: none" src="images/banner_03.jpg">
+          <img onClick="location.href='goodslist.html'" style="DISPLAY: none" src="images/banner_04.jpg">
+          <img onClick="location.href='goodslist.html'" style="DISPLAY: none" src="images/banner_05.jpg">
+        </div>
         <div class="bg"></div>
         <div id=jsNav class=jsNav> <a class="trigger imgSelected" href="javascript:void(0)">1</a> <a class="trigger" href="javascript:void(0)">2</a> <a class="trigger" href="javascript:void(0)">3</a> <a class="trigger" href="javascript:void(0)">4</a> <a class="trigger" href="javascript:void(0)">5</a> </div>
       </div>
@@ -189,25 +195,25 @@
 <!--------start content 2--------->
 
 <div class="popular">
-  <div class="popular1"> <a href="details.html"><img src="images/pic1.jpg" />
+  <div class="popular1"> <a href="goodslist.html"><img src="images/pic1.jpg" />
     <div class="look">
       <h4>流行风向</h4>
       <p>查看更多</p>
     </div>
     </a> </div>
-  <div class="popular1"> <a href="details.html"><img src="images/pic2.jpg" />
+  <div class="popular1"> <a href="goodslist.html"><img src="images/pic2.jpg" />
     <div class="look">
       <h4>时尚前沿</h4>
       <p>产看更多</p>
     </div>
     </a> </div>
-  <div class="popular1"><a href="details.html"> <img src="images/pic3.jpg" />
+  <div class="popular1"><a href="goodslist.html"> <img src="images/pic3.jpg" />
     <div class="look">
       <h4>踮起脚尖</h4>
       <p>产看更多</p>
     </div>
     </a></div>
-  <div class="popular1"> <a href="details.html"><img src="images/pic4.jpg" />
+  <div class="popular1"> <a href="goodslist.html"><img src="images/pic4.jpg" />
     <div class="look">
       <h4>独一无二</h4>
       <p>查看更多</p>
