--- a/src/main/resources/static/goodslist.html
+++ b/src/main/resources/static/goodslist.html
@@ -42,7 +42,7 @@
   </div>
   
   <div class="icon1"> <a href=""><img class="img1" src="images/love.png" title="收藏"/> </a> </div>
-  <div class="icon2"><a href=""> <img class="img1" src="images/bag.png" title="购物车" /> </a> </div>
+  <div class="icon2"><a href="http://localhost:8088/historyOrders"> <img class="img1" src="images/bag.png" title="历史记录" /> </a> </div>
   <div class="icon3" >
     <a class="register_user" href="http://localhost:8088/forwordCart" target="_blank">
       购物车
